Add EdgeGesture service
Based on code of PieService

Change-Id: I053737e36340a5ec6814b21eb87575f9689c7e88
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>
Signed-off-by: Varun Date <date.varun123@gmail.com>
Signed-off-by: Arghya Chanda <arghyac35@gmail.com>

--- a/core/res/res/values/x_config.xml
+++ b/core/res/res/values/x_config.xml
@@ -200,4 +200,9 @@
     <!-- Aspect ratio of screen -->
     <item name="config_screenAspectRatio" format="float" type="dimen">2.1</item>
 
+    <!-- EdgeGesture service -->
+    <java-symbol type="dimen" name="edge_gesture_trigger_distance" />
+    <java-symbol type="dimen" name="edge_gesture_perpendicular_distance" />
+    <java-symbol type="dimen" name="edge_gesture_trigger_thickness" />
+
 </resources>
