--- a/packages/SettingsProvider/res/values/defaults.xml
+++ b/packages/SettingsProvider/res/values/defaults.xml
@@ -32,8 +32,8 @@
     <!-- Default screen brightness, from 0 to 255.  102 is 40%. -->
     <integer name="def_screen_brightness">85</integer>
     <bool name="def_screen_brightness_automatic_mode">true</bool>
-    <fraction name="def_window_animation_scale">25%</fraction>
-    <fraction name="def_window_transition_scale">25%</fraction>
+    <item name="def_window_animation_scale" format="float" type="dimen">0.8</item>
+    <item name="def_window_transition_scale" format="float" type="dimen">0.8</item>
     <bool name="def_haptic_feedback">false</bool>
 
     <bool name="def_bluetooth_on">false</bool>
