Fw_base: App picker Tile
SDB: Bring it Back to "P"

Signed-off-by: Pafcholini <nadyaivanova14@gmail.com>

--- a/packages/SystemUI/res/values/x_strings.xml
+++ b/packages/SystemUI/res/values/x_strings.xml
@@ -247,4 +247,7 @@
 
     <string name="quick_settings_ambient_play">Now playing</string>
 
+    <!-- App Picker Tile -->
+    <string name="quick_settings_apppicker">App Picker</string>
+
 </resources>
