--- a/packages/SystemUI/res/xml/statusbar_items.xml
+++ b/packages/SystemUI/res/xml/statusbar_items.xml
@@ -75,8 +75,8 @@
         android:persistent="false"
         android:title="@string/status_bar_nfc" />
 
-    <com.android.systemui.tuner.StatusBarSwitch
+    <!--com.android.systemui.tuner.StatusBarSwitch
         android:key="roaming"
-        android:title="@string/status_bar_roaming" />
+        android:title="@string/status_bar_roaming" /-->
 
 </PreferenceScreen>
