--- a/packages/SystemUI/res/values/x_strings.xml
+++ b/packages/SystemUI/res/values/x_strings.xml
@@ -152,4 +152,8 @@
     <string name="quick_settings_compass_W">W</string>
     <string name="quick_settings_compass_NW">NW</string>
 
+    <!-- Screenshot QS tile -->
+    <string name="quick_settings_screenshot_label">Screenshot</string>
+    <string name="quick_settings_region_screenshot_label">Partial screenshot</string>
+
 </resources>
