--- a/packages/SystemUI/res/values/x_dimens.xml
+++ b/packages/SystemUI/res/values/x_dimens.xml
@@ -74,4 +74,8 @@
     <dimen name="ticker_text_top_padding">2dp</dimen>
     <dimen name="ticker_text_end_padding">10dp</dimen>
 
+    <!-- The width/height of the charging indicator view on keyguard. -->
+    <dimen name="keyguard_charging_indication_height">48dp</dimen>
+    <dimen name="keyguard_charging_indication_width">24dp</dimen>
+
 </resources>
