Clean up back animation view for edge gesture

--- a/packages/SystemUI/res/values/attrs.xml
+++ b/packages/SystemUI/res/values/attrs.xml
@@ -143,5 +143,8 @@
     <attr name="rotateButtonEndAngle" format="float" />
     <attr name="rotateButtonScaleX" format="float" />
 
+    <declare-styleable name="BackArrowView">
+        <attr name="reversed" format="boolean" />
+    </declare-styleable>
 </resources>
 
