--- a/core/res/res/values/x_symbols.xml
+++ b/core/res/res/values/x_symbols.xml
@@ -300,4 +300,7 @@
   <!-- Old QTI Blobs -->
   <java-symbol type="bool" name="config_oldQtiTelephony" />
 
+  <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
+  <java-symbol type="bool" name="config_cleanupUnusedFingerprints" />
+
 </resources>
