base: move nlp combo config to custom
Change-Id: If60d87785449805af5660b299c6453984a85f971

--- a/core/res/res/values/x_symbols.xml
+++ b/core/res/res/values/x_symbols.xml
@@ -303,6 +303,9 @@
   <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
   <java-symbol type="bool" name="config_cleanupUnusedFingerprints" />
 
+  <!-- NLP Combo -->
+  <java-symbol type="string" name="config_comboNetworkLocationProvider" />
+
   <java-symbol type="bool" name="config_FastChargingLedSupported" />
   <java-symbol type="integer" name="config_notificationsFastBatteryARGB" />
 
