--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -129,16 +129,6 @@
             android:orientation="horizontal"
             >
 
-        <com.android.systemui.statusbar.policy.NetworkTraffic
-            android:id="@+id/networkTraffic"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="2dp"
-            android:singleLine="false"
-            android:fontFamily="sans-serif-condensed"
-            android:gravity="right|center_vertical"/>
-
                 <com.android.systemui.xtended.statusbarweather.StatusBarWeather
                     android:id="@+id/weather_temp"
                     android:layout_width="wrap_content"
@@ -154,6 +144,17 @@
                     android:layout_height="match_parent"
                     android:paddingStart="2dp"
                     android:paddingEnd="2dp" />
+
+                <com.android.systemui.statusbar.policy.NetworkTraffic
+                    android:id="@+id/networkTraffic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="1dp"
+                    android:layout_marginEnd="1dp"
+                    android:singleLine="false"
+                    android:fontFamily="sans-serif-condensed"
+                    android:gravity="center_vertical"
+                    android:visibility="gone"/>
 
             <include layout="@layout/system_icons" />
 
