--- a/core/res/res/values/x_symbols.xml
+++ b/core/res/res/values/x_symbols.xml
@@ -227,4 +227,8 @@
   <java-symbol type="bool" name="config_haveHigherAspectRatioScreen" />
   <java-symbol type="dimen" name="config_screenAspectRatio" />
 
+  <!-- Ambient play -->
+  <java-symbol type="string" name="ambient_recognition_notification" />
+  <java-symbol type="string" name="ambient_recognition_information" />
+
 </resources>
