Fix the Statusbar and QS panel layout

--- a/packages/SystemUI/res/values/x_dimens.xml
+++ b/packages/SystemUI/res/values/x_dimens.xml
@@ -67,6 +67,7 @@
 
     <!-- Hide header -->
     <dimen name="quick_status_bar_system_icons_margin_top">8dp</dimen>
+    <dimen name="quick_status_bar_margin">14dp</dimen>
 
     <!-- Status bar notification ticker -->
     <dimen name="ticker_start_padding">6dp</dimen>
