--- a/packages/SystemUI/res/values/x_strings.xml
+++ b/packages/SystemUI/res/values/x_strings.xml
@@ -245,4 +245,6 @@
     <string name="lte_on">LTE ON</string>
     <string name="lte_off">LTE OFF</string>
 
+    <string name="quick_settings_ambient_play">Now playing</string>
+
 </resources>
