base: make old qti telephony optional [1/2]
* enable by default to satisfy most devices

Change-Id: I47291c522bdb125a3316949d5d35f587f1617f0a
Signed-off-by: DennySPB <dennyspb@gmail.com>

--- a/core/res/res/values/x_config.xml
+++ b/core/res/res/values/x_config.xml
@@ -205,4 +205,7 @@
     <java-symbol type="dimen" name="edge_gesture_perpendicular_distance" />
     <java-symbol type="dimen" name="edge_gesture_trigger_thickness" />
 
+    <!-- Whether the device has outdated qti-telephony-common.jar -->
+    <bool name="config_oldQtiTelephony">true</bool>
+
 </resources>
