--- a/core/res/res/values/x_symbols.xml
+++ b/core/res/res/values/x_symbols.xml
@@ -294,6 +294,10 @@
   <java-symbol type="drawable" name="ic_shortcut_action_screenshot" />
   <java-symbol type="drawable" name="ic_shortcut_action_search" />
 
-    <!-- System fonts -->
-    <java-symbol type="array" name="config_fontPackages" />
+  <!-- System fonts -->
+  <java-symbol type="array" name="config_fontPackages" />
+
+  <!-- Old QTI Blobs -->
+  <java-symbol type="bool" name="config_oldQtiTelephony" />
+
 </resources>
