--- a/packages/SystemUI/res/layout/qs_panel.xml
+++ b/packages/SystemUI/res/layout/qs_panel.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="@*android:dimen/quick_qs_offset_height"
         android:clipToPadding="false"
         android:clipChildren="false"
-        android:background="#00000000" />
+	android:background="@drawable/qs_bg_gradient" />
 
 
     <com.android.systemui.qs.QSPanel
