--- a/core/res/res/values/x_config.xml
+++ b/core/res/res/values/x_config.xml
@@ -211,4 +211,9 @@
     <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
     <bool name="config_cleanupUnusedFingerprints">true</bool>
 
+    <!-- Does the device supports fast charging -->
+    <bool name="config_FastChargingLedSupported">false</bool>
+    <!-- Default value for led color when fast charging is active -->
+    <integer name="config_notificationsFastBatteryARGB">0xFF0000FF</integer>
+
 </resources>
