--- a/core/res/res/values/x_symbols.xml
+++ b/core/res/res/values/x_symbols.xml
@@ -303,4 +303,7 @@
   <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
   <java-symbol type="bool" name="config_cleanupUnusedFingerprints" />
 
+  <java-symbol type="bool" name="config_FastChargingLedSupported" />
+  <java-symbol type="integer" name="config_notificationsFastBatteryARGB" />
+
 </resources>
