--- a/core/res/res/values/x_config.xml
+++ b/core/res/res/values/x_config.xml
@@ -67,4 +67,7 @@
          backgrounds -->
     <bool name="config_useDarkBgNotificationIconTextTinting">false</bool>
 
+    <!-- Smart charging battery percentage -->
+    <integer name="config_smartChargingBatteryLevel">80</integer>
+
 </resources>
