--- a/packages/SystemUI/res/values/x_config.xml
+++ b/packages/SystemUI/res/values/x_config.xml
@@ -28,6 +28,9 @@
     <!-- On-The-Go -->
     <integer name="quick_settings_onthego_dialog_short_timeout">3000</integer>
     <integer name="quick_settings_onthego_dialog_long_timeout">6000</integer>
+    
+    <!-- Color of the FOD view -->
+    <color name="config_fodColor">#00ff00</color>
 
     <!-- Whether to use the mask for the quicksettings icons-->
     <bool name="config_useMaskForQs">true</bool>
