[1/2] base: SystemUI: add separate config for pulse brightness
config_screenBrightnessPulse
if value is -1 it is usiing config_screenBrightnessDoze

Change-Id: I32771db0726d7ad5d12dacef0623e1fd720060e8

--- a/core/res/res/values/x_config.xml
+++ b/core/res/res/values/x_config.xml
@@ -105,4 +105,7 @@
     <!-- Whether notify fingerprint client of successful cancelled authentication -->
     <bool name="config_notifyClientOnFingerprintCancelSuccess">false</bool>
 
+    <!-- -1 means use same as config_screenBrightnessDoze -->
+    <integer name="config_screenBrightnessPulse">-1</integer>
+
 </resources>
