--- a/core/res/res/values/x_symbols.xml
+++ b/core/res/res/values/x_symbols.xml
@@ -170,4 +170,6 @@
   <!-- Whether device supports an alt. ambient display -->
   <java-symbol type="bool" name="config_alt_ambient_display"/>
 
+    <java-symbol type="integer" name="config_screenBrightnessPulse" />
+
 </resources>
