XtendedUtils: Add Alterative ambient display bool

--- a/core/res/res/values/x_symbols.xml
+++ b/core/res/res/values/x_symbols.xml
@@ -166,5 +166,8 @@
 
   <!-- Whether notify fingerprint client of successful cancelled authentication -->
   <java-symbol type="bool" name="config_notifyClientOnFingerprintCancelSuccess" />
+  
+  <!-- Whether device supports an alt. ambient display -->
+  <java-symbol type="bool" name="config_alt_ambient_display"/>
 
 </resources>
