--- a/core/res/res/values/x_symbols.xml
+++ b/core/res/res/values/x_symbols.xml
@@ -172,4 +172,7 @@
 
     <java-symbol type="integer" name="config_screenBrightnessPulse" />
 
+  <!-- Enable face auth when swiping security view -->
+  <java-symbol type="bool" name="config_faceAuthOnSecurityView" />
+
 </resources>
