--- a/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
+++ b/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
@@ -86,6 +86,7 @@
              android:gravity="center_vertical|end"
              android:textAppearance="@style/TextAppearance.StatusBar.Clock"
              android:singleLine="true"
+             systemui:showDark="false"
              android:visibility="gone" />
         </LinearLayout>
 
@@ -135,6 +136,7 @@
                     android:singleLine="true"
                     android:textAppearance="@style/TextAppearance.StatusBar.Clock"
                     android:gravity="center_vertical|end"
+                    systemui:showDark="false"
                     android:visibility="gone"/>
         </LinearLayout>
 
@@ -144,6 +146,7 @@
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:textAppearance="@style/TextAppearance.StatusBar.Clock"
+           systemui:showDark="false"
            android:paddingStart="2dp"
            android:paddingEnd="2dp" />
 
