--- a/packages/SystemUI/res/values/x_strings.xml
+++ b/packages/SystemUI/res/values/x_strings.xml
@@ -307,4 +307,7 @@
     <string name="quick_settings_smart_pixels">Smart pixels</string>
     <string name="quick_settings_smart_pixels_on_power_save">Auto-enabled smart pixels</string>
 
+   <!-- Change clockface -->
+    <string name="change_clock_face">Swipe to change the clock face</string>
+
 </resources>
