--- a/packages/SystemUI/res-keyguard/layout/keyguard_clock_switch.xml
+++ b/packages/SystemUI/res-keyguard/layout/keyguard_clock_switch.xml
@@ -24,50 +24,62 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal|top">
-    <FrameLayout
-         android:id="@+id/clock_view"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:layout_alignParentTop="true">
-        <TextClock
-             android:id="@+id/default_clock_view"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:paddingBottom="@dimen/title_clock_padding"
-             android:letterSpacing="0.02"
-             android:textColor="?attr/wallpaperTextColor"
-             android:singleLine="false"
-             style="@style/widget_big"
-             android:format12Hour="@string/keyguard_widget_12_hours_format"
-             android:format24Hour="@string/keyguard_widget_24_hours_format"
-             android:elegantTextHeight="false"
-        />
-        <TextClock
-             android:id="@+id/default_clock_view_bold"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_gravity="bottom|center_horizontal"
-             android:letterSpacing="0.03"
-             android:textColor="?attr/wallpaperTextColor"
-             android:singleLine="true"
-             style="@style/widget_title_bold"
-             android:format12Hour="@string/keyguard_widget_12_hours_format"
-             android:format24Hour="@string/keyguard_widget_24_hours_format"
-             android:elegantTextHeight="false"
-             android:visibility="invisible"
-             />
-    </FrameLayout>
-    <!-- Custom text clock. -->
-    <include layout="@layout/custom_text_clock_view"
-        android:layout_below="@id/clock_view" />
-    <!-- Custom Analog clock. -->
-    <include layout="@layout/custom_clock_view"
-        android:layout_below="@id/custom_text_clock_view" />
-    <!-- Custom Num Analog clock. -->
-    <include layout="@layout/custom_num_clock_view"
-        android:layout_below="@id/custom_clock_view" />
-    <include layout="@layout/keyguard_status_area"
-        android:id="@+id/keyguard_status_area"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/whole_clock_container"
+        android:animateLayoutChanges="true"
+        android:layout_centerInParent="true">
+
+        <FrameLayout
+            android:id="@+id/clock_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true">
+            <TextClock
+                android:id="@+id/default_clock_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/title_clock_padding"
+                android:letterSpacing="0.02"
+                android:textColor="?attr/wallpaperTextColor"
+                android:singleLine="false"
+                style="@style/widget_big"
+                android:format12Hour="@string/keyguard_widget_12_hours_format"
+                android:format24Hour="@string/keyguard_widget_24_hours_format"
+                android:elegantTextHeight="false"
+            />
+            <TextClock
+                android:id="@+id/default_clock_view_bold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:letterSpacing="0.03"
+                android:textColor="?attr/wallpaperTextColor"
+                android:singleLine="true"
+                style="@style/widget_title_bold"
+                android:format12Hour="@string/keyguard_widget_12_hours_format"
+                android:format24Hour="@string/keyguard_widget_24_hours_format"
+                android:elegantTextHeight="false"
+                android:visibility="invisible"
+                />
+        </FrameLayout>
+
+        <!-- Custom text clock. -->
+        <include layout="@layout/custom_text_clock_view"
+            android:layout_below="@id/clock_view" />
+        <!-- Custom Analog clock. -->
+        <include layout="@layout/custom_clock_view"
+            android:layout_below="@id/custom_text_clock_view" />
+        <!-- Custom Num Analog clock. -->
+        <include layout="@layout/custom_num_clock_view"
+            android:layout_below="@id/custom_clock_view" />
+        <include layout="@layout/keyguard_status_area"
+            android:id="@+id/keyguard_status_area"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/clock_view" />
+
+    </RelativeLayout>
+
 </com.android.keyguard.KeyguardClockSwitch>
